split getRecommendedFriendsForUserId into smaller helper functions to reduce code duplication